--- a/posts.html
+++ b/posts.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html ng-app='app'>
   <head>
-    <link rel='stylesheet' href='http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css'>
+    <link rel='stylesheet' href='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css'>
   </head>
   <body>
     <div ng-controller='PostsCtrl' class='container'>
@@ -23,7 +23,7 @@
         </li>
       </ul>
     </div>
-    <script src='http://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-rc.4/angular.js'></script>
+    <script src='http://ajax.googleapis.com/ajax/libs/angularjs/1.2.29/angular.js'></script>
     <script>
       var app = angular.module('app', [])
       app.controller('PostsCtrl', function ($scope) {
